<resources>
    <string name="app_name">EnjoyEducation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">emailAddres@gmail.com</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_my_courses">Мои курсы</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_callback">Напиши нам</string>
    <string name="menu_statistic">Статистика</string>
    <string name="menu_error">Сообщить об ошибке</string>
    <string name="menu_forum">Форум</string>
    <string name="menu_updates">Обновления</string>
    <string name="menu_share">Поделиться</string>
    <string name="menu_import">Импортировать</string>
    <string name="first_page_slogan">Узнавай что-то новое всегда, когда есть возможность</string>
    <string name="log_in">Войти</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="role_student">Студент</string>
    <string name="role_author">Автор</string>
    <string name="text_registration">Регистрация</string>
    <string name="registration_slogan">Присоединяйся к нашей образовательной платформе</string>
    <string name="name">Имя</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">ЗАБЫЛ СВОЙ ПАРОЛЬ?</string>
    <string name="text_math">МАТЕМАТИКА</string>
    <string name="text_first_lesson">Интегральные уравнения</string>
    <string name="text_second_lesson">Производные</string>
    <string name="text_second_lesson_upper">ПРОИЗВОДНЫЕ</string>
    <string name="text_third_lesson">Параметры</string>
    <string name="text_progress_1">100%</string>
    <string name="text_progress_2">80%</string>
    <string name="text_progress_3">0%</string>
    <string name="text_settings_push">Получать push-уведомления</string>
    <string name="text_settings_push_exp">Напоминания об уроке</string>
    <string name="text_settings_push_period">Переодичность уведомлений</string>
    <string name="text_settings_push_period_day">Каждый день</string>
    <string name="text_settings_push_period_1_day">1 раз в день</string>
    <string name="text_settings_push_period_1_week">1 раз в неделю</string>
    <string name="text_settings_push_count">Количество уведомлений</string>
    <string name="text_profile">ПРОФИЛЬ</string>
    <string name="text_profile_name">Василий Петров</string>
    <string name="text_profile_location">Россия, Москва</string>
    <string name="text_profile_interests">Интересы</string>
    <string name="text_profile_active_courses">Активные курсы</string>
    <string name="text_profile_back_to_courses">ВЕРНУТЬСЯ К КУРСАМ</string>
    <string name="text_profile_settings_location">Страна, город</string>



    <string name="home_second">Home Second</string>
</resources>
