<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".SignUp"
        tools:layout_editor_absoluteX="-109dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/text_registration"
            android:textColor="@color/colorBottomsLogIn"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="208dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/registration_slogan"
            android:textColor="@color/colorBottomsLogIn"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="260dp"
            android:layout_marginEnd="92dp"
            android:src="@drawable/pict_author"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="TODO" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="260dp"
            android:src="@drawable/student"
            app:layout_constraintEnd_toStartOf="@+id/imageView13"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="100dp"
            android:text="@string/role_author"
            android:textColor="@color/colorBottomsLogIn"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView13" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="16dp"
            android:text="@string/role_student"
            android:textColor="@color/colorBottomsLogIn"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView14" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="320dp"
            android:layout_height="64dp"
            android:layout_marginTop="380dp"
            android:background="@color/colorBottomsLogIn"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="16dp"
            android:hint="@string/name"
            android:textColor="#80000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints=""
            android:enabled="false"/>

        <EditText
            android:id="@+id/editText3"
            android:layout_width="320dp"
            android:layout_height="64dp"
            android:background="@color/colorBottomsLogIn"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:hint="@string/e_mail"
            android:textColor="#80000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText2"
            android:enabled="false" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="320dp"
            android:layout_height="64dp"
            android:background="@color/colorBottomsLogIn"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingLeft="16dp"
            android:hint="@string/password"
            android:textColor="#80000000"
            android:textColorHint="@color/colorSeparator"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText3"
            android:autofillHints=""
            android:enabled="false"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="320dp"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorBottomsLogIn"
            android:text="@string/registration"
            android:textColor="@color/colorLogIn"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText4"
            android:enabled="false" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>